2000-05-21  Chema Celorio  <chema@celorio.com>

	* search.c: Rewrote

2000-05-13  Chema Celorio  <chema@celorio.com>

	* utils.h (gedit_debug): add debug recent

	* gedit.c (options): add debug recent

	* utils.c: deleted debug function, we are now
	using a macro Jason wrote.
	

2000-05-17  Jason Leach  <leach@wam.umd.edu>

	* view.c: cleaning up some of the debug messages.
	* prefs.c: ditto.

2000-05-12  Jason Leach  <leach@wam.umd.edu>

	* view.c (gedit_event_key_press): removed unused variable 'gint
	mask'

2000-05-05  Jason Leach  <leach@wam.umd.edu>

	* window.c: changed references to gE_icon to point to the new
	gedit-icon

2000-05-01  Chema Celorio  <chema@celorio.com>

	* dialogs/dialog-prefs.c (prepare_fontscolors_page): leak.
	(apply_cb): leak.

	* view.c (doc_delete_text_cb): leak

2000-05-01  Chema Celorio  <chema@celorio.com>

	* print.c (print_header): leak x 3
	(print_ps_line): leak.

2000-05-01  Jason Leach  <leach@wam.umd.edu>

	* undo.c (gedit_undo_do): plugged a leak that happened everytime
	you did undo then redo.

	* recent.c (recent_update_menus): fixed a 35-45 byte leak that
	happened every time you opened a file or this was called (visit a
	file already in your recent list, etc).

	* view.c (gedit_event_button_press): fixed a silly 20-byte leak
	that happened on every button press event in a document.

	* view.c (gedit_view_init): fixed a 624-byte leak that happened
	with every document you opened.

2000-05-01  Chema Celorio  <chema@celorio.com>

	* document.c (gedit_document_new): leak

2000-05-01  Jason Leach  <leach@wam.umd.edu>

	* view.c (doc_insert_text_cb): added a call to insert_into_buffer,
	this is important because otherwise doc->buf->str otherwise won't
	contain the contents of your document until you save or something,
	so like the e-mail plugin sends no body on Untitled documents.

2000-05-01  Chema Celorio  <chema@celorio.com>

	* plugin.c (gedit_plugins_window_add): memleaks -= 1;
