@@ -1,3 +1,8 @@
+2000-05-22  Chema Celorio  <chema@celorio.com>
+
+	* search.c: improve robustnes a bit, there is
+	still more work to do.
+
 2000-05-21  Chema Celorio  <chema@celorio.com>
 
 	* search.c: Rewrote
